force-app/main/default/objects/Estimated_Revenue_Schedule__c/Estimated_Revenue_Schedule__c.object-meta.xml
<CustomObject>
    <description>Object to store Estimated Revenue Schedule for Products</description>
    <label>Estimated Revenue Schedule</label>
    <nameField>
        <displayFormat>ERS-{0000}</displayFormat>
        <label>Estimated Revenue Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimated Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>