force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <description>SFP-6290 - Enter the expected commission amount based on the frequency.</description>
    <inlineHelpText>Enter the expected commission amount based on the frequency.</inlineHelpText>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>