force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Estimated_Product_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Product_Revenue__c</fullName>
    <description>This formula field calculates the monthly product revenue associated with product. (SGPRT-1703)</description>
    <formula>Fee_Amount__c  + Margin_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimates the product revenue to be realised in the month.</inlineHelpText>
    <label>Estimated Product Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>