force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <description>SFP-6290 - This formula field calculates the monthly product revenue associated with product.</description>
    <formula>Commission_Amount__c + Fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimates the product revenue to be realized in the month.</inlineHelpText>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>