force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Estimated_Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue_Date__c</fullName>
    <label>Estimated Revenue Date</label>
    <type>Date</type>
</CustomField>