force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Fee_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Date__c</fullName>
    <label>Fee Date</label>
    <type>Date</type>
</CustomField>