force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Fee_Year__c.field-meta.xml
<CustomField>
    <fullName>Fee_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Year</label>
    <type>Checkbox</type>
</CustomField>