force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Margin_Amount__c</fullName>
    <description>This formula field calculates the monthly product margin revenue associated with product. (SGPRT-1703)</description>
    <formula>Product__r.Total_Margin__c / Product__r.Term_Tenor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Margin amount indicates the portion of total margin to be realised in the month.</inlineHelpText>
    <label>Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>