force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Master-Detail relationship to Advisory product</description>
    <label>Product</label>
    <referenceTo>SB_Product__c</referenceTo>
    <relationshipLabel>Estimated Revenue Schedules</relationshipLabel>
    <relationshipName>Estimated_Revenue_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>