force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Risk_Weighted_Value__c.field-meta.xml
<CustomField>
    <fullName>Risk_Weighted_Value__c</fullName>
    <label>Risk Weighted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>