force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Show_Estimated_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Show_Estimated_Revenue_Schedule__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_350, FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_350)) + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Estimated Revenue Schedule</label>
    <type>Text</type>
</CustomField>