force-app/main/default/objects/Estimated_Revenue_Schedule__c/fields/Updated_by_LEX__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_LEX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated by LEX</label>
    <type>Checkbox</type>
</CustomField>