force-app/main/default/objects/Estimated_Revenue_Schedule__c/recordTypes/Estimated_Revenue_Schedule_Advisory.recordType-meta.xml
<RecordType>
    <fullName>Estimated_Revenue_Schedule_Advisory</fullName>
    <active>true</active>
    <description>Record type to store Estimated Revenue Schedule for Advisory products</description>
    <label>Estimated Revenue Schedule Advisory</label>
</RecordType>