force-app/main/default/objects/Estimated_Revenue_Schedule__c/recordTypes/Estimated_Revenue_Schedule_Fees.recordType-meta.xml
<RecordType>
    <fullName>Estimated_Revenue_Schedule_Fees</fullName>
    <active>true</active>
    <description>Record type to store Estimated Revenue Schedule for Non Interest Revenue products</description>
    <label>Estimated Revenue Schedule Fees</label>
</RecordType>