force-app/main/default/objects/Estimated_Revenue_Schedule__c/recordTypes/Estimated_Revenue_Schedule_Fees_and_Margin.recordType-meta.xml
<RecordType>
    <fullName>Estimated_Revenue_Schedule_Fees_and_Margin</fullName>
    <active>true</active>
    <description>Record type to store Estimated Revenue Schedule for Non Interest Revenue and Interest Revenue products</description>
    <label>Estimated Revenue Schedule Fees and Margin</label>
</RecordType>