force-app/main/default/objects/Estimated_Revenue_Schedule__c/recordTypes/Insurance.recordType-meta.xml
<RecordType>
    <fullName>Insurance</fullName>
    <active>true</active>
    <description>SFP-6290 Record type to store Estimated Revenue Schedule for Insurance products</description>
    <label>Insurance</label>
</RecordType>